Big changes. AutoScheduler now works as expected. Advanced features and better UI coming in a future update.